# Swapspace

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.static  NEWS  News  README  README.md  cleanup.sh  configure.ac  swapspace.conf  swapspace.lsbinit  swapspace.service  tarball.sh
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
debian/: .cvsignore  changelog  conffiles  control  copyright  dirs  manpages  postinst  rules  swapspace.init  swapspace.install  watch
debian/patches/: 100-makefile-use-debian-flags.patch  series
doc/: Makefile  comparison  fsm.dot  release.md  swapspace.8  technicaldetails  technicaldetails.md  unix-ipc-sucks.md
src/: .cvsignore  Makefile.am  Makefile.static  config.h  config.h.static  env.h  hog.c  log.c  log.h  main.c  main.h  memory.c  memory.h  opts.c  opts.h  state.c  state.h  support.c  support.h  swaps.c  swaps.h
